--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -21,8 +21,8 @@
 
     <ScrollView
         android:id="@+id/scrollview1"
-        android:layout_width="400dp"
-        android:layout_height="270dp"
+        android:layout_width="413dp"
+        android:layout_height="333dp"
         android:contentDescription="@string/app_name"
         app:layout_constraintBottom_toTopOf="@+id/appbar"
         app:layout_constraintEnd_toEndOf="parent"
@@ -266,7 +266,7 @@
                 android:layout_height="match_parent">
 
                 <LinearLayout
-                    android:id="@+id/homeBtn"
+                    android:id="@+id/homeBtn2"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.2"
@@ -291,7 +291,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/homeBtn"
+                    android:id="@+id/profileBtn2"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.2"
@@ -316,7 +316,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/homeBtn"
+                    android:id="@+id/jh"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.2"
@@ -341,7 +341,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/homeBtn"
+                    android:id="@+id/menuBtn2"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.2"
@@ -352,13 +352,13 @@
                         android:layout_width="match_parent"
                         android:layout_height="18dp"
                         android:layout_marginTop="6dp"
-                        app:srcCompat="@drawable/btn3" />
+                        app:srcCompat="@drawable/menu" />
 
                     <TextView
                         android:id="@+id/textView5"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Support"
+                        android:text="Menu"
                         android:textAlignment="center"
                         android:textColor="#676767"
                         android:textSize="16sp"
@@ -366,7 +366,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/homeBtn"
+                    android:id="@+id/settingsBtn2"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.2"
