--- a/app/src/main/res/layout/category.xml
+++ b/app/src/main/res/layout/category.xml
@@ -29,12 +29,27 @@
             android:layout_below="@id/categoryTitle"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:textSize="15dp"
             android:text="testef"
-
             android:textColor="@color/white"
+
+            android:textSize="15dp"
             android:textStyle="bold" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/cart_floating_btn2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#ff5e00"
+            android:contentDescription="@string/appbar_scrolling_view_behavior"
+            android:elevation="3dp"
+            android:src="@drawable/shopping_cart"
+            app:backgroundTint="#ff5e00"
+            app:layout_anchor="@+id/app_bar"
+            app:layout_anchorGravity="center">
+
+        </com.google.android.material.floatingactionbutton.FloatingActionButton>
     </RelativeLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
