--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -9,32 +9,32 @@
     android:layoutDirection="ltr">
 
 
-    <ImageView
-        android:id="@+id/productBackgroundImage"
-        android:layout_width="match_parent"
-        android:layout_height="228dp"
-
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/pizza_home" />
-
     <ScrollView
         android:id="@+id/scrollview1"
-        android:layout_width="413dp"
-        android:layout_height="333dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="85dp"
         android:contentDescription="@string/app_name"
-        app:layout_constraintBottom_toTopOf="@+id/appbar"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/productBackgroundImage">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
 
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="6dp"
-            android:layout_marginBottom="20dp">
+            android:layout_marginBottom="10dp">
+
+            <ImageView
+                android:id="@+id/productBackgroundImage"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/pizza_home" />
 
             <Spinner
                 android:id="@+id/spinner"
@@ -168,7 +168,7 @@
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="10dp"
                 android:text="Size"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
