--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -87,6 +87,7 @@
                     android:id="@+id/normalBtn"
                     android:layout_width="133dp"
                     android:layout_height="50dp"
+                    android:checked="true"
                     android:text="Normal" />
 
 
@@ -202,7 +203,6 @@
                 android:layout_height="50dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="16dp"
-                android:background="@drawable/plus_minus_btn"
                 android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/quantityTxt">
@@ -223,7 +223,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="1"
-                    android:textSize="20sp"
+                    android:textSize="20dp"
                     tools:layout_editor_absoluteX="108dp"
                     tools:layout_editor_absoluteY="631dp" />
 
